# skill-everything

./: .cursorrules  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml
.cursor/rules/: brainstorming.mdc  branch-finishing.mdc  code-quality.mdc  db-schema.mdc  debugging.mdc  docker.mdc  domain-template.mdc  drawio.mdc  error-log.mdc  fastapi.mdc  git-conventions.mdc  github-cli.mdc  implementation-plan.mdc  langchain.mdc  python.mdc  react.mdc  review-deployment.mdc  security-review.mdc  self-extension-workflow.mdc  shell-scripting.mdc  svg-check.mdc  tdd.mdc  typescript.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  error-capture.md  new-skill.md
.github/PULL_REQUEST_TEMPLATE/: rule-learning.md  sub-skill.md
.github/workflows/: auto-approve-rule-pr.yml  ci.yml  eval.yml  lint-rules.yml
docs/: dashboard.html  demo.html  eval-reproduction.md  presentation.html
docs/launch/: hackernews-post.md  hn-comment-templates.md  twitter-thread.md
references/: _index.yml
references/_templates/: error-entry.template.md  sub-skill.template.md
references/development/: code-quality.md  python.md  react.md  typescript.md
references/domain/: template.md
references/errors/: error-log.md  exceptions.yml  self-extension-workflow.md
references/git/: conventions.md
references/process/: review-deployment.md
schemas/: error-entry.json  eval-result.json  eval-task.json  skill-manifest.json
skills/: _index.yml
skills/_template/: SKILL.md
skills/brainstorming/: SKILL.md
skills/branch-finishing/: SKILL.md
skills/code-quality/: SKILL.md
skills/db-schema/: SKILL.md
skills/debugging/: SKILL.md
skills/docker/: SKILL.md
skills/domain-template/: SKILL.md
skills/drawio/: SKILL.md
skills/error-log/: SKILL.md  _entry-template.md
skills/fastapi/: SKILL.md
skills/git-conventions/: SKILL.md
skills/github-cli/: SKILL.md
skills/implementation-plan/: SKILL.md
skills/langchain/: SKILL.md
skills/python/: SKILL.md
skills/react/: SKILL.md
skills/review-deployment/: SKILL.md
skills/security-review/: SKILL.md
tests/: test_compare_eval.py  test_dashboard_xss.py  test_eval_runner_dryrun.py  test_eval_schemas.py  test_parse.py  test_render_loaders.py  test_validate_rules.py  test_validate_rules_adversarial.py
tools/: check_token_budgets.py  compare_eval.py  eval_runner.py  generate-dashboard.py  render_eval_table.py  render_loaders.py  render_readme_table.py  run_eval.py  validate_eval_results.py  validate_rules.py
(+38 files in other folders)
