[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-everything-tools"
version = "0.75.0"
description = "Tooling for skill-everything: rule validator, loader sync, token-table renderer, eval framework"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "skill-everything maintainers" }]
dependencies = [
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "jsonschema>=4.21",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pyright>=1.1",
    "pre-commit>=3.6",
]
# Real-provider integrations for the eval framework. Optional because the
# harness runs end-to-end in dry-run mode without these deps; install them
# only when running tools/run_eval.py --no-dry-run against real providers
# (gated by API keys + budget cap).
eval = [
    "anthropic>=0.40",
    "openai>=1.50",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/sordi-ai/skill-everything"
Issues = "https://github.com/sordi-ai/skill-everything/issues"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = []

[tool.pyright]
pythonVersion = "3.10"
include = ["tools", "tests"]
strict = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
